Introduce SimilarityExpressionCallFilter and SimilarityExpressionCallLoader.
Add a CallFilter-based multispec filter and a loader that paginates similarity
calls using AnatEntitySimilarity-driven ExpressionCallLoader iteration instead
of loading all expression calls into memory.